fixed h1 title being behind the hero image. it is now in the correct position

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 h1 {
 	font-family: 'Poppins', sans-serif;
 	color: #fff;
+	margin-top: 50px;
 }
 
 p {
